// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksAutomaton 1`] = `
Object {
  "DLCs": Array [],
  "DLCsCount": 0,
  "_revision": 0,
  "_version": 14,
  "blockCount": 599,
  "blockCountTotal": 599,
  "blockIntegrity": 907887,
  "blockMass": 183685,
  "blockPCU": 1326,
  "blockTime": 3850,
  "blockVolume": 5836375,
  "blocks": Object {
    "<Vanilla Light Armor blocks>": 541,
    "AirVent/AirVentFan": 1,
    "AirVent/AirVentFanFull": 1,
    "AirVent/SmallAirVentFan": 1,
    "AirVent/SmallAirVentFanFull": 1,
    "ButtonPanel/LargeBlockAccessPanel3": 1,
    "CameraBlock/LargeCameraTopMounted": 1,
    "CameraBlock/SmallCameraTopMounted": 1,
    "Cockpit/SpeederCockpit": 1,
    "Cockpit/SpeederCockpitCompact": 1,
    "CubeBlock/AngledInteriorWallA": 1,
    "CubeBlock/AngledInteriorWallB": 1,
    "CubeBlock/LargeWarningSign1": 1,
    "CubeBlock/LargeWarningSign10": 1,
    "CubeBlock/LargeWarningSign11": 1,
    "CubeBlock/LargeWarningSign12": 1,
    "CubeBlock/LargeWarningSign13": 1,
    "CubeBlock/LargeWarningSign2": 1,
    "CubeBlock/LargeWarningSign4": 1,
    "CubeBlock/LargeWarningSign5": 1,
    "CubeBlock/LargeWarningSign6": 1,
    "CubeBlock/LargeWarningSign7": 1,
    "CubeBlock/LargeWarningSign8": 1,
    "CubeBlock/LargeWarningSign9": 1,
    "CubeBlock/PipeWorkBlockA": 1,
    "CubeBlock/PipeWorkBlockB": 1,
    "CubeBlock/SmallWarningSign1": 1,
    "CubeBlock/SmallWarningSign10": 1,
    "CubeBlock/SmallWarningSign11": 1,
    "CubeBlock/SmallWarningSign12": 1,
    "CubeBlock/SmallWarningSign13": 1,
    "CubeBlock/SmallWarningSign2": 1,
    "CubeBlock/SmallWarningSign3": 1,
    "CubeBlock/SmallWarningSign4": 1,
    "CubeBlock/SmallWarningSign5": 1,
    "CubeBlock/SmallWarningSign6": 1,
    "CubeBlock/SmallWarningSign7": 1,
    "CubeBlock/SmallWarningSign8": 1,
    "CubeBlock/SmallWarningSign9": 1,
    "EmotionControllerBlock/EmotionControllerLarge": 1,
    "EmotionControllerBlock/EmotionControllerSmall": 1,
    "InteriorLight/LargeBlockInsetLight": 1,
    "InteriorLight/SmallBlockInsetLight": 1,
    "MotorRotor/SmallRotor": 1,
    "MotorStator/LargeStator": 1,
    "MyProgrammableBlock/LargeProgrammableBlockReskin": 1,
    "MyProgrammableBlock/SmallProgrammableBlockReskin": 1,
    "SensorBlock/LargeBlockSensorReskin": 1,
    "SensorBlock/SmallBlockSensorReskin": 1,
    "TerminalBlock/ControlPanel": 1,
    "TerminalBlock/LargeBlockAccessPanel1": 1,
    "TerminalBlock/LargeBlockAccessPanel2": 1,
    "TerminalBlock/LargeBlockAccessPanel4": 1,
    "TerminalBlock/SmallBlockAccessPanel1": 1,
    "TerminalBlock/SmallBlockAccessPanel2": 1,
    "TerminalBlock/SmallBlockAccessPanel3": 1,
    "TerminalBlock/SmallBlockAccessPanel4": 1,
    "TimerBlock/TimerBlockReskinLarge": 1,
    "TimerBlock/TimerBlockReskinSmall": 1,
  },
  "componentCount": 9882,
  "componentMass": 183685,
  "componentTime": 10038,
  "componentVolume": 31399,
  "components": Object {
    "BulletproofGlass": 7,
    "Computer": 124,
    "Construction": 450,
    "Detector": 12,
    "Display": 24,
    "InteriorPlate": 321,
    "LargeTube": 28,
    "Motor": 34,
    "RadioCommunication": 8,
    "SmallTube": 20,
    "SteelPlate": 8854,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 2,
  "gridSize": "Mixed",
  "gridStatic": false,
  "gridTitle": "AllBlocksAutomaton",
  "height": 52.5,
  "ingotCount": 192935,
  "ingotMass": 192935,
  "ingotTime": 10002,
  "ingotVolume": 24575,
  "ingots": Object {
    "Iron": 192327,
    "Nickel": 350,
    "Silicon": 258,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 51290,
    "rotated": true,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 67.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 275997,
  "oreMass": 275997,
  "oreVolume": 102119,
  "ores": Object {
    "Iron": 274753,
    "Nickel": 875,
    "Silicon": 369,
  },
  "orientation": Orientation {
    "Forward": "Forward",
    "Up": "Up",
  },
  "sizeMB": 0.24,
  "thrustAtmospheric": Object {},
  "thrustHydrogen": Object {},
  "thrustIon": Object {},
  "vanilla": true,
  "width": 65,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksAutomaton 2`] = `
"..AAA......................
..AAAAAA...................
..AAAAAA...................
AAAAAAAA...................
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksAutomaton 3`] = `
"...............AAA.AAA....
..AA...AAA.....AAA.AAA....
.AAAAAAAAAAAAAAAAAAAAAAAAA
AAAAAAAAAAAAAAAAAAAAAAAAAA
BA........................
BA........................
B.........................
B.........................
BAA.......................
BA........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksAutomaton 4`] = `
"BBBBBBBBBBBBBBBBBBBB.......
AAAAAAAAAAAAAAAAAAAAAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksContact 1`] = `
Object {
  "DLCs": Array [
    "ContactPack",
  ],
  "DLCsCount": 1,
  "_revision": 0,
  "_version": 14,
  "blockCount": 587,
  "blockCountTotal": 587,
  "blockIntegrity": 1017785,
  "blockMass": 207867,
  "blockPCU": 2580,
  "blockTime": 3964,
  "blockVolume": 6763875,
  "blocks": Object {
    "<Vanilla Light Armor blocks>": 541,
    "ButtonPanel/LargeBlockModularBridgeButtonPanel": 1,
    "CargoContainer/SmallBlockModularContainer": 1,
    "Cockpit/LargeBlockCaptainDesk": 1,
    "Cockpit/LargeBlockModularBridgeCockpit": 1,
    "CryoChamber/SmallBlockBunkBed": 1,
    "CubeBlock/LargeBlockModularBridgeCorner": 1,
    "CubeBlock/LargeBlockModularBridgeCorner2x1BaseL": 1,
    "CubeBlock/LargeBlockModularBridgeCorner2x1BaseR": 1,
    "CubeBlock/LargeBlockModularBridgeEmpty": 1,
    "CubeBlock/LargeBlockModularBridgeFloor": 1,
    "CubeBlock/LargeBlockModularBridgeHalfSlopedCorner": 1,
    "CubeBlock/LargeBlockModularBridgeRaisedSlopedCorner": 1,
    "CubeBlock/LargeBlockModularBridgeSideL": 1,
    "CubeBlock/LargeBlockModularBridgeSideR": 1,
    "CubeBlock/SmallBlockKitchenCoffeeMachine": 1,
    "CubeBlock/SmallBlockKitchenSink": 1,
    "Door/LargeBlockEvenWideDoor": 1,
    "Door/LargeBlockSmallGate": 1,
    "ExtendedPistonBase/LargePistonBaseReskin": 1,
    "ExtendedPistonBase/SmallPistonBaseReskin": 1,
    "Jukebox/SmallBlockJukeboxReskin": 1,
    "LargeGatlingTurret/LargeGatlingTurretReskin": 1,
    "LargeGatlingTurret/SmallGatlingTurretReskin": 1,
    "LargeMissileTurret/LargeMissileTurretReskin": 1,
    "LargeMissileTurret/SmallMissileTurretReskin": 1,
    "MotorRotor/SmallRotor": 1,
    "MotorStator/LargeStator": 1,
    "PistonTop/LargePistonTopReskin": 1,
    "PistonTop/SmallPistonTopReskin": 1,
    "RadioAntenna/LargeBlockCompactRadioAntennaReskin": 1,
    "RadioAntenna/SmallBlockCompactRadioAntennaReskin": 1,
    "ReflectorLight/LargeBlockFloodlight": 1,
    "ReflectorLight/LargeBlockFloodlightAngled": 1,
    "ReflectorLight/LargeBlockFloodlightCornerL": 1,
    "ReflectorLight/LargeBlockFloodlightCornerR": 1,
    "ReflectorLight/SmallBlockFloodlight": 1,
    "ReflectorLight/SmallBlockFloodlightAngled": 1,
    "ReflectorLight/SmallBlockFloodlightAngledRotated": 1,
    "ReflectorLight/SmallBlockFloodlightCornerL": 1,
    "ReflectorLight/SmallBlockFloodlightCornerR": 1,
    "ReflectorLight/SmallBlockFloodlightDown": 1,
    "TerminalBlock/ControlPanel": 1,
    "TerminalBlock/SmallBlockFirstAidCabinet": 1,
    "TerminalBlock/SmallBlockKitchenFridge": 1,
    "TerminalBlock/SmallBlockKitchenMicrowave": 1,
    "TerminalBlock/SmallBlockKitchenOven": 1,
  },
  "componentCount": 11513,
  "componentMass": 207867,
  "componentTime": 11865,
  "componentVolume": 39954,
  "components": Object {
    "BulletproofGlass": 256,
    "Computer": 185,
    "Construction": 578,
    "Display": 11,
    "Girder": 113,
    "InteriorPlate": 310,
    "LargeTube": 26,
    "MetalGrid": 40,
    "Motor": 77,
    "RadioCommunication": 44,
    "SmallTube": 180,
    "SteelPlate": 9693,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 4,
  "gridSize": "Mixed",
  "gridStatic": false,
  "gridTitle": "AllBlocksContact",
  "height": 57.5,
  "ingotCount": 218622,
  "ingotMass": 218622,
  "ingotTime": 13829,
  "ingotVolume": 28955,
  "ingots": Object {
    "Cobalt": 120,
    "Iron": 213941,
    "Nickel": 585,
    "Silicon": 3976,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 68323,
    "rotated": false,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 67.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 313173,
  "oreMass": 313173,
  "oreVolume": 115874,
  "ores": Object {
    "Cobalt": 400,
    "Iron": 305630,
    "Nickel": 1463,
    "Silicon": 5680,
  },
  "orientation": Orientation {
    "Forward": "Forward",
    "Up": "Up",
  },
  "sizeMB": 0.23,
  "thrustAtmospheric": Object {},
  "thrustHydrogen": Object {},
  "thrustIon": Object {},
  "vanilla": true,
  "width": 67.5,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksContact 2`] = `
"...AAAAA...................
...AAAAA...................
.AAAAAAA...................
.AAAAAAA...................
.AAAAAAA...................
AAAAAAAA...................
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksContact 3`] = `
".....AAAAA.AAAAA...........
.....AAAAA.AAAAA...........
.A...AAAAA.AAAAA......AAAAA
.A...AAAAA.AAAAAAAAA..AAAAA
.AAAAAAAAA.AAAAAAAAAAAAAAAA
AAAAAAAAAAAAAAAAAAAAAAAAAA.
BBAA.......................
BBAA.......................
BAAA.......................
B..........................
BAA........................
BA.........................
B..........................
B..........................
B..........................
B..........................
B..........................
B..........................
B..........................
B..........................
B..........................
B..........................
B..........................
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksContact 4`] = `
".AAAAAAAAAAAAAAAAAAAAAAAAA.
AAAAAAAAAAAAAAAAAAAAAAAAAA.
AAAAAAAAAAAAAAAAAAAAAAAAAA.
AAAAAAAAAAAAAAAAAAAAAAAAAA.
AAAAAAAAAAAAAAAAAAAAAAAAAA.
AAAAAAAAAAAAAAAAAAAAAAAAAA.
AAAAAAAAAAAAAAAAAAAAAAAAAA.
AAAAAAAAAAAAAAAAAAAAAAAAAAB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.........................AB
.......................AAAB
.......................AAAB
.......................AAAB
.......................AAAB
.......................AAAB
.......................AAAB
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksDecoPack3 1`] = `
Object {
  "DLCs": Array [
    "DecorativePack3",
  ],
  "DLCsCount": 1,
  "_revision": 0,
  "_version": 14,
  "blockCount": 597,
  "blockCountTotal": 597,
  "blockIntegrity": 941979,
  "blockMass": 194712,
  "blockPCU": 2134,
  "blockTime": 4026,
  "blockVolume": 8270500,
  "blocks": Object {
    "<Vanilla Light Armor blocks>": 541,
    "Beacon/LargeBlockBeaconReskin": 1,
    "Beacon/SmallBlockBeaconReskin": 1,
    "ButtonPanel/LargeBlockInsetButtonPanel": 1,
    "CargoContainer/LargeBlockInsetBookshelf": 1,
    "Cockpit/LargeBlockInsetPlantCouch": 1,
    "Cockpit/SmallBlockCapCockpit": 1,
    "CryoChamber/LargeBlockCryoRoom": 1,
    "CryoChamber/LargeBlockHalfBed": 1,
    "CryoChamber/LargeBlockHalfBedOffset": 1,
    "CryoChamber/LargeBlockInsetBed": 1,
    "CubeBlock/LargeBarrel": 1,
    "CubeBlock/LargeBarrelStack": 1,
    "CubeBlock/LargeBarrelThree": 1,
    "CubeBlock/SmallBarrel": 1,
    "CubeBlock/Truss": 1,
    "CubeBlock/TrussAngled": 1,
    "CubeBlock/TrussAngledSmall": 1,
    "CubeBlock/TrussFloor": 1,
    "CubeBlock/TrussFloorAngled": 1,
    "CubeBlock/TrussFloorAngledInverted": 1,
    "CubeBlock/TrussFloorHalf": 1,
    "CubeBlock/TrussFloorT": 1,
    "CubeBlock/TrussFloorX": 1,
    "CubeBlock/TrussFrame": 1,
    "CubeBlock/TrussHalf": 1,
    "CubeBlock/TrussHalfSmall": 1,
    "CubeBlock/TrussSloped": 2,
    "CubeBlock/TrussSlopedSmall": 2,
    "CubeBlock/TrussSmall": 1,
    "InteriorLight/LargeBlockInsetAquarium": 1,
    "InteriorLight/LargeBlockInsetKitchen": 1,
    "Jukebox/LargeBlockInsetEntertainmentCorner": 1,
    "Ladder2/TrussLadder": 1,
    "MotorRotor/SmallRotor": 1,
    "MotorStator/LargeStator": 1,
    "SolarPanel/LargeBlockColorableSolarPanel": 1,
    "SolarPanel/LargeBlockColorableSolarPanelCorner": 1,
    "SolarPanel/LargeBlockColorableSolarPanelCornerInverted": 1,
    "SolarPanel/SmallBlockColorableSolarPanel": 1,
    "SolarPanel/SmallBlockColorableSolarPanelCorner": 1,
    "SolarPanel/SmallBlockColorableSolarPanelCornerInverted": 1,
    "TerminalBlock/ControlPanel": 1,
    "TerminalBlock/LargeCrate": 1,
    "TextPanel/HoloLCDLarge": 1,
    "TextPanel/HoloLCDSmall": 1,
    "TextPanel/LargeCurvedLCDPanel": 1,
    "TextPanel/LargeDiagonalLCDPanel": 1,
    "TextPanel/LargeFullBlockLCDPanel": 1,
    "TextPanel/SmallCurvedLCDPanel": 1,
    "TextPanel/SmallDiagonalLCDPanel": 1,
    "TextPanel/SmallFullBlockLCDPanel": 1,
    "Warhead/LargeExplosiveBarrel": 1,
    "Warhead/SmallExplosiveBarrel": 1,
    "WindTurbine/LargeBlockWindTurbineReskin": 1,
  },
  "componentCount": 11167,
  "componentMass": 194712,
  "componentTime": 11544,
  "componentVolume": 39710,
  "components": Object {
    "BulletproofGlass": 94,
    "Computer": 154,
    "Construction": 665,
    "Display": 76,
    "Explosives": 4,
    "Girder": 297,
    "GravityGenerator": 1,
    "InteriorPlate": 410,
    "LargeTube": 49,
    "Medical": 3,
    "MetalGrid": 4,
    "Motor": 34,
    "RadioCommunication": 44,
    "SmallTube": 304,
    "SolarCell": 80,
    "SteelPlate": 8948,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 2,
  "gridSize": "Mixed",
  "gridStatic": false,
  "gridTitle": "AllBlocksDecoPack3",
  "height": 70,
  "ingotCount": 204545,
  "ingotMass": 204545,
  "ingotTime": 12662,
  "ingotVolume": 26674,
  "ingots": Object {
    "Cobalt": 232,
    "Gold": 10,
    "Iron": 201243,
    "Magnesium": 8,
    "Nickel": 640,
    "Silicon": 2347,
    "Silver": 65,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 51290,
    "rotated": true,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 67.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 296009,
  "oreMass": 296009,
  "oreVolume": 109523,
  "ores": Object {
    "Cobalt": 773,
    "Gold": 1000,
    "Iron": 287490,
    "Magnesium": 1143,
    "Nickel": 1600,
    "Silicon": 3353,
    "Silver": 650,
  },
  "orientation": Orientation {
    "Forward": "Forward",
    "Up": "Up",
  },
  "sizeMB": 0.27,
  "thrustAtmospheric": Object {},
  "thrustHydrogen": Object {},
  "thrustIon": Object {},
  "vanilla": true,
  "width": 65,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksDecoPack3 2`] = `
"...AAAAA...................
...AAAAA...................
...AAAAA...................
...AAAAA...................
...AAAAA...................
...AAAAA...................
...AAAAA...................
...AAAAA...................
...AAAAA...................
...AAAAA...................
AAAAAAAA..AAAAA............
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksDecoPack3 3`] = `
".AAA......................
.AAA......................
.AAA......................
.AAA......................
.AAA......................
.AAA......................
.AAA......................
.AAA...AA.AAA.............
.AAA...AAAAAA.............
.AAAAAAAAAAAA.............
AAAAAAAAAAAAAAAAAAAAAAAAAA
BAAAAA....................
BAAAAA....................
BAAAAA....................
BAAAAA....................
BAA.......................
BA........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksDecoPack3 4`] = `
"BBBBBBBBBBBBBBBBBBBB.......
.AAAAAAAAAAAAAAAAAAAAAAAAAA
...........AAAAAAAAAAAAAAAA
............AAAAAAAAAAAAAAA
............AAAAAAAAAAAAAAA
............AAAAA..AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksPrototech 1`] = `
Object {
  "DLCs": Array [],
  "DLCsCount": 0,
  "_revision": 0,
  "_version": 14,
  "blockCount": 556,
  "blockCountTotal": 556,
  "blockIntegrity": 1719143,
  "blockMass": 343421,
  "blockPCU": 1481,
  "blockTime": 4106,
  "blockVolume": 8024875,
  "blocks": Object {
    "<Vanilla Light Armor blocks>": 541,
    "Assembler/LargePrototechAssembler": 1,
    "BatteryBlock/LargeBlockPrototechBattery": 1,
    "BatteryBlock/SmallBlockPrototechBattery": 1,
    "Drill/LargeBlockPrototechDrill": 1,
    "Gyro/LargeBlockPrototechGyro": 1,
    "Gyro/SmallBlockPrototechGyro": 1,
    "JumpDrive/LargePrototechJumpDrive": 1,
    "JumpDrive/SmallPrototechJumpDrive": 1,
    "MotorRotor/SmallRotor": 1,
    "MotorStator/LargeStator": 1,
    "Refinery/LargePrototechRefinery": 1,
    "Refinery/SmallPrototechRefinery": 1,
    "TerminalBlock/ControlPanel": 1,
    "Thrust/LargeBlockPrototechThruster": 1,
    "Thrust/SmallBlockPrototechThruster": 1,
  },
  "componentCount": 15396,
  "componentMass": 343421,
  "componentTime": 36969,
  "componentVolume": 100680,
  "components": Object {
    "Computer": 618,
    "Construction": 1033,
    "Display": 11,
    "GravityGenerator": 34,
    "LargeTube": 341,
    "MetalGrid": 530,
    "Motor": 4,
    "PrototechCapacitor": 64,
    "PrototechCircuitry": 30,
    "PrototechCoolingUnit": 18,
    "PrototechFrame": 12,
    "PrototechMachinery": 57,
    "PrototechPanel": 2346,
    "PrototechPropulsionUnit": 63,
    "SmallTube": 6,
    "SteelPlate": 8729,
    "Superconductor": 1500,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 2,
  "gridSize": "Mixed",
  "gridStatic": false,
  "gridTitle": "AllBlocksPrototech",
  "height": 57.5,
  "ingotCount": 387864,
  "ingotMass": 387864,
  "ingotTime": 91049,
  "ingotVolume": 52850,
  "ingots": Object {
    "Cobalt": 17620,
    "Gold": 4549,
    "Iron": 334806,
    "Magnesium": 9384,
    "Nickel": 19776,
    "Platinum": 293,
    "PrototechFrame": 12,
    "PrototechScrap": 338,
    "Silicon": 1074,
    "Silver": 362,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 167817,
    "rotated": true,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 67.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {
      "Component/PrototechFrame": 12,
      "Ingot/PrototechScrap": 338,
    },
    "ores": Object {},
  },
  "missingDefinitionsCount": 2,
  "oreCount": 2445692,
  "oreMass": 2445692,
  "oreVolume": 904906,
  "ores": Object {
    "Cobalt": 58733,
    "Gold": 454900,
    "Iron": 478294,
    "Magnesium": 1340571,
    "Nickel": 49440,
    "Platinum": 58600,
    "Silicon": 1534,
    "Silver": 3620,
  },
  "orientation": Orientation {
    "Forward": "Forward",
    "Up": "Up",
  },
  "sizeMB": 0.18,
  "thrustAtmospheric": Object {},
  "thrustHydrogen": Object {},
  "thrustIon": Object {},
  "vanilla": false,
  "width": 65,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksPrototech 2`] = `
"AAAAA......................
AAAAAAAA...................
AAAAAAAAA..................
AAAAAAAAA..................
AAAAAAAAA..................
AAAAAAAA............AAA....
.......AAAAAABBAAAAAAAAAAAA
.......AAAAAABBAAACAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksPrototech 3`] = `
".AAAAAAAAAA...............
.AAAAAAAAAA...............
.AAAAAAAAAAAA.............
.AAAAAAAAAAAA.............
.AAAAAAAAAAAAAA...........
AAAAAAAAAAAAAAAAAAAAAAAAAA
BCBBBAAAA.................
BDBBBAAAA.................
BAAAAAAAA.................
B.........................
BAA.......................
BA........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksPrototech 4`] = `
"BBBBBBBBBBBBBBBBBBBB.......
....AAAACAAABBAAAAAAAAAAAAA
....AAA..AAABBAAAAAAAAAAAAA
....AAA.....BBAAAAAAAAAAAAA
....AAA.....BBAAA..AAAAAAAA
..............AAA.AAAAAAAAA
..............AAA.AAAAAAAAA
..............AAA.AAAAAAAAA
..............AAA.AAAAAAAAA
..................AAAAAAAAA
..................AAAAAAAAA
..................AAAAAAAAA
..................AAAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksSignal 1`] = `
Object {
  "DLCs": Array [
    "SignalsPack",
  ],
  "DLCsCount": 1,
  "_revision": 0,
  "_version": 14,
  "blockCount": 598,
  "blockCountTotal": 598,
  "blockIntegrity": 952286,
  "blockMass": 193906,
  "blockPCU": 1213,
  "blockTime": 3947,
  "blockVolume": 6028750,
  "blocks": Object {
    "<Vanilla Light Armor blocks>": 541,
    "ButtonPanel/LargeBlockConsoleModuleButtons": 1,
    "ButtonPanel/SmallBlockConsoleModuleButtons": 1,
    "Cockpit/LargeBlockConsoleModuleInvertedCorner": 1,
    "Cockpit/LargeBlockConsoleModuleScreens": 1,
    "CubeBlock/Corridor": 1,
    "CubeBlock/CorridorCorner": 1,
    "CubeBlock/CorridorDoubleWindow": 1,
    "CubeBlock/CorridorNarrow": 1,
    "CubeBlock/CorridorT": 1,
    "CubeBlock/CorridorWindow": 1,
    "CubeBlock/CorridorWindowRoof": 1,
    "CubeBlock/CorridorX": 1,
    "CubeBlock/ExtendedWindow": 1,
    "CubeBlock/ExtendedWindowCorner": 1,
    "CubeBlock/ExtendedWindowCornerInverted": 1,
    "CubeBlock/ExtendedWindowCornerInvertedRailing": 1,
    "CubeBlock/ExtendedWindowDiagonal": 1,
    "CubeBlock/ExtendedWindowDiagonalRailing": 1,
    "CubeBlock/ExtendedWindowDome": 1,
    "CubeBlock/ExtendedWindowEnd": 1,
    "CubeBlock/ExtendedWindowRailing": 1,
    "CubeBlock/LargeBlockConsoleModule": 1,
    "CubeBlock/LargeBlockConsoleModuleCorner": 1,
    "CubeBlock/LargeBlockInsetWall": 1,
    "CubeBlock/LargeBlockInsetWallCorner": 1,
    "CubeBlock/LargeBlockInsetWallCornerInverted": 1,
    "CubeBlock/LargeBlockInsetWallPillar": 1,
    "CubeBlock/LargeBlockInsetWallSlope": 1,
    "CubeBlock/SmallBlockConsoleModule": 1,
    "CubeBlock/SmallBlockConsoleModuleCorner": 1,
    "CubeBlock/SmallBlockConsoleModuleInvertedCorner": 1,
    "CubeBlock/SmallBlockExtendedWindow": 1,
    "CubeBlock/SmallBlockExtendedWindowCorner": 1,
    "CubeBlock/SmallBlockExtendedWindowCornerInverted": 1,
    "CubeBlock/SmallBlockExtendedWindowDiagonal": 1,
    "CubeBlock/SmallBlockExtendedWindowDome": 1,
    "CubeBlock/SmallBlockExtendedWindowEnd": 1,
    "CubeBlock/TrussPillar": 1,
    "CubeBlock/TrussPillarCorner": 1,
    "CubeBlock/TrussPillarDiagonal": 1,
    "CubeBlock/TrussPillarOffset": 1,
    "CubeBlock/TrussPillarSlanted": 1,
    "CubeBlock/TrussPillarSmall": 1,
    "CubeBlock/TrussPillarT": 1,
    "CubeBlock/TrussPillarX": 1,
    "Decoy/TrussPillarDecoy": 1,
    "Door/LargeBlockNarrowDoor": 1,
    "Door/LargeBlockNarrowDoorHalf": 1,
    "InteriorLight/CorridorLight": 1,
    "InteriorLight/CorridorNarrowStowage": 1,
    "InteriorLight/LargeBlockInsetWallLight": 1,
    "InteriorLight/TrussPillarLight": 1,
    "InteriorLight/TrussPillarLightSmall": 1,
    "MotorRotor/SmallRotor": 1,
    "MotorStator/LargeStator": 1,
    "TerminalBlock/ControlPanel": 1,
    "TextPanel/SmallBlockConsoleModuleScreens": 1,
  },
  "componentCount": 11722,
  "componentMass": 193906,
  "componentTime": 11755,
  "componentVolume": 39126,
  "components": Object {
    "BulletproofGlass": 328,
    "Computer": 41,
    "Construction": 821,
    "Display": 23,
    "Girder": 106,
    "InteriorPlate": 1496,
    "LargeTube": 6,
    "Motor": 12,
    "RadioCommunication": 1,
    "SmallTube": 69,
    "SteelPlate": 8819,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 2,
  "gridSize": "Mixed",
  "gridStatic": false,
  "gridTitle": "AllBlocksSignal",
  "height": 57.5,
  "ingotCount": 202812,
  "ingotMass": 202812,
  "ingotTime": 12951,
  "ingotVolume": 27280,
  "ingots": Object {
    "Iron": 197708,
    "Nickel": 60,
    "Silicon": 5044,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 51290,
    "rotated": true,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 67.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 289796,
  "oreMass": 289796,
  "oreVolume": 107225,
  "ores": Object {
    "Iron": 282440,
    "Nickel": 150,
    "Silicon": 7206,
  },
  "orientation": Orientation {
    "Forward": "Forward",
    "Up": "Up",
  },
  "sizeMB": 0.2,
  "thrustAtmospheric": Object {},
  "thrustHydrogen": Object {},
  "thrustIon": Object {},
  "vanilla": true,
  "width": 65,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksSignal 2`] = `
".......A...................
.......A...................
.......A...................
......AA...................
......AA...................
AAAAAAAA...................
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksSignal 3`] = `
"............A.............
............A.............
............A.............
......AAAAAAA.............
.AAAAAAAAAAAAA............
AAAAAAAAAAAAAAAAAAAAAAAAAA
BB........................
BB........................
BA........................
B.........................
BAA.......................
BA........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksSignal 4`] = `
"BBBBBBBBBBBBBBBBBBBB.......
AAAAAAAAAAAAAAAAAAAAAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksWarfare2 1`] = `
Object {
  "DLCs": Array [
    "Warfare2",
  ],
  "DLCsCount": 1,
  "_revision": 0,
  "_version": 14,
  "blockCount": 573,
  "blockCountTotal": 573,
  "blockIntegrity": 1257537,
  "blockMass": 341636,
  "blockPCU": 2253,
  "blockTime": 4041,
  "blockVolume": 6572875,
  "blocks": Object {
    "<Vanilla Light Armor blocks>": 541,
    "AirtightHangarDoor/AirtightHangarDoorWarfare2A": 1,
    "AirtightHangarDoor/AirtightHangarDoorWarfare2B": 1,
    "AirtightHangarDoor/AirtightHangarDoorWarfare2C": 1,
    "BatteryBlock/LargeBlockBatteryBlockWarfare2": 1,
    "BatteryBlock/SmallBlockBatteryBlockWarfare2": 1,
    "Cockpit/LargeBlockStandingCockpit": 1,
    "Cockpit/PassengerBench": 1,
    "Cockpit/SmallBlockStandingCockpit": 1,
    "CubeBlock/BridgeWindow1x1Face": 1,
    "CubeBlock/BridgeWindow1x1FaceInverted": 1,
    "CubeBlock/BridgeWindow1x1Slope": 1,
    "Door/SlidingHatchDoor": 1,
    "Door/SlidingHatchDoorHalf": 1,
    "HeatVentBlock/LargeHeatVentBlock": 1,
    "HeatVentBlock/SmallHeatVentBlock": 1,
    "InteriorLight/LargeLightPanel": 1,
    "InteriorLight/SmallLightPanel": 1,
    "MotorRotor/SmallRotor": 1,
    "MotorStator/LargeStator": 1,
    "Reactor/LargeBlockLargeGeneratorWarfare2": 1,
    "Reactor/LargeBlockSmallGeneratorWarfare2": 1,
    "Reactor/SmallBlockLargeGeneratorWarfare2": 1,
    "Reactor/SmallBlockSmallGeneratorWarfare2": 1,
    "Searchlight/LargeSearchlight": 1,
    "Searchlight/SmallSearchlight": 1,
    "SmallGatlingGun/SmallGatlingGunWarfare2": 1,
    "SmallMissileLauncher/SmallMissileLauncherWarfare2": 1,
    "TerminalBlock/ControlPanel": 1,
    "Thrust/LargeBlockLargeModularThruster": 1,
    "Thrust/LargeBlockSmallModularThruster": 1,
    "Thrust/SmallBlockLargeModularThruster": 1,
    "Thrust/SmallBlockSmallModularThruster": 1,
  },
  "componentCount": 16338,
  "componentMass": 341636,
  "componentTime": 36285,
  "componentVolume": 76602,
  "components": Object {
    "BulletproofGlass": 81,
    "Computer": 227,
    "Construction": 678,
    "Display": 9,
    "Girder": 21,
    "InteriorPlate": 92,
    "LargeTube": 128,
    "MetalGrid": 58,
    "Motor": 108,
    "PowerCell": 100,
    "Reactor": 2198,
    "SmallTube": 152,
    "SteelPlate": 11333,
    "Superconductor": 100,
    "Thrust": 1053,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 2,
  "gridSize": "Mixed",
  "gridStatic": false,
  "gridTitle": "AllBlocksWarfare2",
  "height": 52.5,
  "ingotCount": 387721,
  "ingotMass": 387721,
  "ingotTime": 66683,
  "ingotVolume": 59692,
  "ingots": Object {
    "Cobalt": 10704,
    "Gold": 1253,
    "Iron": 317958,
    "Nickel": 1030,
    "Platinum": 421,
    "Silicon": 1405,
    "Silver": 10990,
    "Stone": 43960,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 106380,
    "rotated": true,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 67.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 857848,
  "oreMass": 857848,
  "oreVolume": 317404,
  "ores": Object {
    "Cobalt": 35680,
    "Gold": 125300,
    "Iron": 454226,
    "Nickel": 2575,
    "Platinum": 84200,
    "Silicon": 2007,
    "Silver": 109900,
    "Stone": 43960,
  },
  "orientation": Orientation {
    "Forward": "Forward",
    "Up": "Up",
  },
  "sizeMB": 0.21,
  "thrustAtmospheric": Object {},
  "thrustHydrogen": Object {},
  "thrustIon": Object {
    "Backward": 4852800,
  },
  "vanilla": true,
  "width": 65,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksWarfare2 2`] = `
".....AAA...................
.....AAA...................
.....AAA...................
AAAAAAAA...................
.......AAAAAAAABBBAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
.......AAAAAAAAAAAAAAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksWarfare2 3`] = `
"...AAA.....AAAAAAAA.AA....
...AAAAAA..AAAAAAAA.AA....
.AAAAAAAAAAAAAAAAAA.AAAAAA
AAAAAAAAAAAAAAAAAAAAAAAAAA
BCBB......................
BAAAA.....................
BAAAA.....................
BAAAA.....................
BAA.......................
BA........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
B.........................
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AllBlocksWarfare2 4`] = `
"BBBBBBBBBBBBBBBBBBBB.......
AAAAAAAAAAAAAAAAAAAAAAAAAAA
AA.......AAAAAA....AAAAAAAA
AA.......AAAAAA....AAAAAAAA
AA.................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
...................AAAAAAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AtmosphericLander 1`] = `
Object {
  "DLCs": Array [
    "Automation",
  ],
  "DLCsCount": 1,
  "_revision": 0,
  "_version": 14,
  "blockCount": 261,
  "blockCountTotal": 261,
  "blockIntegrity": 1050264,
  "blockMass": 280279,
  "blockPCU": 1524,
  "blockTime": 2815,
  "blockVolume": 6578125,
  "blocks": Object {
    "<Vanilla Heavy Armor blocks>": 2,
    "<Vanilla Interior Light blocks>": 4,
    "<Vanilla Light Armor blocks>": 192,
    "<Vanilla Text Panel blocks>": 3,
    "<Vanilla Window blocks>": 8,
    "AirVent/": 1,
    "AirtightSlideDoor/LargeBlockSlideDoor": 1,
    "Assembler/LargeAssembler": 1,
    "BatteryBlock/LargeBlockBatteryBlock": 4,
    "Beacon/LargeBlockBeacon": 1,
    "CargoContainer/LargeBlockSmallContainer": 2,
    "Cockpit/CockpitOpen": 1,
    "Conveyor/LargeBlockConveyor": 3,
    "ConveyorConnector/ConveyorTube": 3,
    "CubeBlock/LargeInteriorPillar": 4,
    "CubeBlock/LargeSteelCatwalkPlate": 8,
    "Gyro/LargeBlockGyro": 1,
    "LandingGear/LargeBlockLandingGear": 4,
    "MedicalRoom/LargeMedicalRoom": 1,
    "MyProgrammableBlock/LargeProgrammableBlock": 1,
    "OreDetector/LargeOreDetector": 1,
    "OxygenGenerator/": 1,
    "OxygenTank/": 1,
    "Reactor/LargeBlockSmallGenerator": 1,
    "Refinery/LargeRefinery": 1,
    "Thrust/LargeBlockLargeAtmosphericThrust": 2,
    "Thrust/LargeBlockSmallAtmosphericThrust": 8,
    "TimerBlock/TimerBlockLarge": 1,
  },
  "componentCount": 16032,
  "componentMass": 280279,
  "componentTime": 25014,
  "componentVolume": 96642,
  "components": Object {
    "BulletproofGlass": 568,
    "Computer": 504,
    "Construction": 1581,
    "Detector": 20,
    "Display": 58,
    "Girder": 131,
    "InteriorPlate": 735,
    "LargeTube": 265,
    "Medical": 15,
    "MetalGrid": 362,
    "Motor": 3220,
    "PowerCell": 320,
    "RadioCommunication": 40,
    "Reactor": 100,
    "SmallTube": 372,
    "SteelPlate": 7741,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 1,
  "gridSize": "Large",
  "gridStatic": false,
  "gridTitle": "AtmosphericLander",
  "height": 22.5,
  "ingotCount": 296141,
  "ingotMass": 296141,
  "ingotTime": 36109,
  "ingotVolume": 40555,
  "ingots": Object {
    "Cobalt": 1086,
    "Iron": 263084,
    "Nickel": 19900,
    "Silicon": 9271,
    "Silver": 800,
    "Stone": 2000,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 88635,
    "rotated": true,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 37.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 452448,
  "oreMass": 452448,
  "oreVolume": 167406,
  "ores": Object {
    "Cobalt": 3620,
    "Iron": 375834,
    "Nickel": 49750,
    "Silicon": 13244,
    "Silver": 8000,
    "Stone": 2000,
  },
  "orientation": Orientation {
    "Forward": "Backward",
    "Up": "Up",
  },
  "sizeMB": 0.13,
  "thrustAtmospheric": Object {
    "Backward": 1296000,
    "Forward": 1296000,
    "Left": 1296000,
    "Right": 1296000,
    "Up": 12960000,
  },
  "thrustHydrogen": Object {},
  "thrustIon": Object {},
  "vanilla": true,
  "width": 27.5,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise AtmosphericLander 2`] = `
".....AA.AA.....
....AAAAAAA....
....AAAAAAA....
AAA.AAAAAAA.AAA
AAAAACAAABAAAAA
AAAAABABBBAAAAA
AAAAAAABAAAAAAA
AAAAAAAAAAAAAAA
...A..AAA..A...
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AtmosphericLander 3`] = `
"..AAAA.....
.AAAAAAA...
.AAAAAAAA..
.AAAAAAAA..
.ABBBCAAA..
.ABBBBAA...
AAAABBAAA..
A..BAB.AAA.
A..AAA.A.AA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise AtmosphericLander 4`] = `
"......AAA......
....AAAAAAA....
....ABAAABA....
AAAAABBABBAAAAA
AAAAAAAAAAAAAAA
AAAAACAAAAAAAAA
....AAAAAAA....
....AAAAAAA....
.....AAAAA.....
.......A.......
.......A.......
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise EveryLargeBlockOnce 1`] = `
Object {
  "DLCs": Array [
    "Automation",
  ],
  "DLCsCount": 1,
  "_revision": 0,
  "_version": 14,
  "blockCount": 122,
  "blockCountTotal": 122,
  "blockIntegrity": 1166646,
  "blockMass": 359567,
  "blockPCU": 4924,
  "blockTime": 2557,
  "blockVolume": 7375000,
  "blocks": Object {
    "<Vanilla Heavy Armor blocks>": 12,
    "<Vanilla Interior Light blocks>": 3,
    "<Vanilla Light Armor blocks>": 12,
    "<Vanilla Text Panel blocks>": 7,
    "<Vanilla Window blocks>": 2,
    "AirtightHangarDoor/": 1,
    "AirtightSlideDoor/LargeBlockSlideDoor": 1,
    "Assembler/LargeAssembler": 1,
    "BatteryBlock/LargeBlockBatteryBlock": 1,
    "Beacon/LargeBlockBeacon": 1,
    "ButtonPanel/ButtonPanelLarge": 1,
    "CameraBlock/LargeCameraBlock": 1,
    "CargoContainer/LargeBlockLargeContainer": 1,
    "CargoContainer/LargeBlockSmallContainer": 1,
    "Cockpit/LargeBlockCockpit": 1,
    "Cockpit/LargeBlockCockpitSeat": 1,
    "Cockpit/PassengerSeatLarge": 1,
    "Collector/Collector": 1,
    "Conveyor/LargeBlockConveyor": 1,
    "ConveyorConnector/ConveyorTube": 1,
    "ConveyorConnector/ConveyorTubeCurved": 1,
    "ConveyorSorter/LargeBlockConveyorSorter": 1,
    "CryoChamber/LargeBlockCryoChamber": 1,
    "CubeBlock/ArmorCenter": 1,
    "CubeBlock/ArmorCorner": 1,
    "CubeBlock/ArmorInvCorner": 1,
    "CubeBlock/ArmorSide": 1,
    "CubeBlock/LargeBlockInteriorWall": 1,
    "CubeBlock/LargeCoverWall": 1,
    "CubeBlock/LargeCoverWallHalf": 1,
    "CubeBlock/LargeInteriorPillar": 1,
    "CubeBlock/LargeRamp": 1,
    "CubeBlock/LargeStairs": 1,
    "CubeBlock/LargeSteelCatwalk": 1,
    "CubeBlock/LargeSteelCatwalk2Sides": 1,
    "CubeBlock/LargeSteelCatwalkCorner": 1,
    "CubeBlock/LargeSteelCatwalkPlate": 1,
    "Decoy/LargeDecoy": 1,
    "Door/": 1,
    "Drill/LargeBlockDrill": 1,
    "ExtendedPistonBase/LargePistonBase": 1,
    "Gyro/LargeBlockGyro": 1,
    "InteriorTurret/LargeInteriorTurret": 1,
    "LandingGear/LargeBlockLandingGear": 1,
    "LargeGatlingTurret/": 1,
    "LargeMissileTurret/": 1,
    "LaserAntenna/LargeBlockLaserAntenna": 1,
    "MedicalRoom/LargeMedicalRoom": 1,
    "MergeBlock/LargeShipMergeBlock": 1,
    "MotorAdvancedRotor/LargeAdvancedRotor": 1,
    "MotorAdvancedStator/LargeAdvancedStator": 1,
    "MotorRotor/LargeRotor": 1,
    "MotorStator/LargeStator": 1,
    "MyProgrammableBlock/LargeProgrammableBlock": 1,
    "OreDetector/LargeOreDetector": 1,
    "OxygenFarm/LargeBlockOxygenFarm": 1,
    "OxygenGenerator/": 1,
    "OxygenTank/": 1,
    "OxygenTank/LargeHydrogenTank": 1,
    "Passage/": 1,
    "PistonTop/LargePistonTop": 1,
    "Projector/LargeProjector": 1,
    "RadioAntenna/LargeBlockRadioAntenna": 1,
    "Reactor/LargeBlockLargeGenerator": 1,
    "Reactor/LargeBlockSmallGenerator": 1,
    "Refinery/Blast Furnace": 1,
    "Refinery/LargeRefinery": 1,
    "ReflectorLight/LargeBlockFrontLight": 1,
    "RemoteControl/LargeBlockRemoteControl": 1,
    "SensorBlock/LargeBlockSensor": 1,
    "ShipConnector/Connector": 1,
    "ShipGrinder/LargeShipGrinder": 1,
    "ShipWelder/LargeShipWelder": 1,
    "SmallMissileLauncher/LargeMissileLauncher": 1,
    "SolarPanel/LargeBlockSolarPanel": 1,
    "SoundBlock/LargeBlockSoundBlock": 1,
    "TerminalBlock/ControlPanel": 1,
    "Thrust/LargeBlockLargeAtmosphericThrust": 1,
    "Thrust/LargeBlockLargeHydrogenThrust": 1,
    "Thrust/LargeBlockLargeThrust": 1,
    "Thrust/LargeBlockSmallAtmosphericThrust": 1,
    "Thrust/LargeBlockSmallHydrogenThrust": 1,
    "Thrust/LargeBlockSmallThrust": 1,
    "TimerBlock/TimerBlockLarge": 1,
    "UpgradeModule/LargeEffectivenessModule": 1,
    "UpgradeModule/LargeEnergyModule": 1,
    "UpgradeModule/LargeProductivityModule": 1,
    "Warhead/LargeWarhead": 1,
    "Wheel/Wheel1x1": 1,
    "Wheel/Wheel3x3": 1,
    "Wheel/Wheel5x5": 1,
  },
  "componentCount": 21028,
  "componentMass": 359567,
  "componentTime": 45855,
  "componentVolume": 134351,
  "components": Object {
    "BulletproofGlass": 217,
    "Computer": 975,
    "Construction": 2652,
    "Detector": 56,
    "Display": 100,
    "Explosives": 6,
    "Girder": 36,
    "InteriorPlate": 1279,
    "LargeTube": 588,
    "Medical": 18,
    "MetalGrid": 980,
    "Motor": 1482,
    "PowerCell": 100,
    "RadioCommunication": 105,
    "Reactor": 2100,
    "SmallTube": 679,
    "SolarCell": 32,
    "SteelPlate": 8363,
    "Superconductor": 220,
    "Thrust": 1040,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 4,
  "gridSize": "Large",
  "gridStatic": false,
  "gridTitle": "EveryLargeBlockOnce",
  "height": 40,
  "ingotCount": 419179,
  "ingotMass": 419179,
  "ingotTime": 85843,
  "ingotVolume": 63848,
  "ingots": Object {
    "Cobalt": 13340,
    "Gold": 1480,
    "Iron": 332015,
    "Magnesium": 12,
    "Nickel": 14706,
    "Platinum": 416,
    "Silicon": 4350,
    "Silver": 10860,
    "Stone": 42000,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 92988,
    "rotated": true,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 55,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 945267,
  "oreMass": 945267,
  "oreVolume": 349749,
  "ores": Object {
    "Cobalt": 44467,
    "Gold": 148000,
    "Iron": 474307,
    "Magnesium": 1714,
    "Nickel": 36765,
    "Platinum": 83200,
    "Silicon": 6214,
    "Silver": 108600,
    "Stone": 42000,
  },
  "orientation": Orientation {
    "Forward": "Forward",
    "Up": "Up",
  },
  "sizeMB": 0.13,
  "thrustAtmospheric": Object {
    "Forward": 7128000,
  },
  "thrustHydrogen": Object {
    "Forward": 8280000,
  },
  "thrustIon": Object {
    "Forward": 4665600,
  },
  "vanilla": true,
  "width": 32.5,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise EveryLargeBlockOnce 2`] = `
"............AA........
............AAAAA.....
...........AABAAA.....
............AAAAA.....
............AAAA......
............AAAA......
............AAAA......
......AAA...AAA.......
..A...AAA...AA........
..A...AAA.AABAAA.AAAAA
AAAAAABBB.ABBAAAAAAAAA
AABAAABBBAAAABAAAAAAAA
.AAAAAAAAAAAA.AA.AAAAA
......AAAAAAAAAA.AAAAA
......AAAAAAAAA.......
......AAAAAAA.........
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise EveryLargeBlockOnce 3`] = `
"........A....
.......AAA...
.......AAAA..
.......AAAA..
.......AB....
.......ABA...
.......ABA...
......AABA...
......AAA....
...AAAAABAA..
AAAAAABBCBAAA
...AAABBCBAAA
.....AABBBAAA
......AAAAA..
......AAAA...
......AAAA...
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise EveryLargeBlockOnce 4`] = `
".........AA...........
.........AA...........
.........AA...........
......AAAAA..AAA......
......AAAAA..AAA......
......AAAAA..AAA......
......AACAAAAAAAAAA...
.....AAABBAAAAAAAAA...
..AAAAABBCBBAAAAAAAAAA
AAAAAAAAABBA.AAAAAABAA
AAAAA..AAA...AAAAAA...
.............AAA......
.............AAA......
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise RespawnShip 1`] = `
Object {
  "DLCs": Array [],
  "DLCsCount": 0,
  "_revision": 0,
  "_version": 14,
  "blockCount": 118,
  "blockCountTotal": 118,
  "blockIntegrity": 531409,
  "blockMass": 153949,
  "blockPCU": 1093,
  "blockTime": 1549,
  "blockVolume": 2343750,
  "blocks": Object {
    "<Vanilla Interior Light blocks>": 2,
    "<Vanilla Light Armor blocks>": 83,
    "<Vanilla Window blocks>": 2,
    "AirtightSlideDoor/LargeBlockSlideDoor": 1,
    "Assembler/LargeAssembler": 1,
    "CargoContainer/LargeBlockSmallContainer": 1,
    "Cockpit/CockpitOpen": 1,
    "Collector/Collector": 1,
    "Conveyor/LargeBlockConveyor": 1,
    "ConveyorConnector/ConveyorTube": 1,
    "ConveyorConnector/ConveyorTubeCurved": 1,
    "CubeBlock/LargeSteelCatwalk": 4,
    "GravityGenerator/": 1,
    "Gyro/LargeBlockGyro": 1,
    "MedicalRoom/LargeMedicalRoom": 1,
    "OxygenGenerator/": 1,
    "Reactor/LargeBlockSmallGenerator": 1,
    "Refinery/LargeRefinery": 1,
    "ShipConnector/Connector": 1,
    "Thrust/LargeBlockSmallThrust": 12,
  },
  "componentCount": 8236,
  "componentMass": 153949,
  "componentTime": 12432,
  "componentVolume": 41473,
  "components": Object {
    "BulletproofGlass": 40,
    "Computer": 399,
    "Construction": 1361,
    "Display": 30,
    "Girder": 10,
    "GravityGenerator": 6,
    "InteriorPlate": 472,
    "LargeTube": 139,
    "Medical": 15,
    "MetalGrid": 148,
    "Motor": 100,
    "Reactor": 100,
    "SmallTube": 198,
    "SteelPlate": 4258,
    "Thrust": 960,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 1,
  "gridSize": "Large",
  "gridStatic": false,
  "gridTitle": "RespawnShip",
  "height": 12.5,
  "ingotCount": 164466,
  "ingotMass": 164466,
  "ingotTime": 45979,
  "ingotVolume": 21285,
  "ingots": Object {
    "Cobalt": 11364,
    "Gold": 1020,
    "Iron": 145748,
    "Nickel": 2290,
    "Platinum": 384,
    "Silicon": 830,
    "Silver": 830,
    "Stone": 2000,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 78561,
    "rotated": true,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 12.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 442102,
  "oreMass": 442102,
  "oreVolume": 163578,
  "ores": Object {
    "Cobalt": 37880,
    "Gold": 102000,
    "Iron": 208211,
    "Nickel": 5725,
    "Platinum": 76800,
    "Silicon": 1186,
    "Silver": 8300,
    "Stone": 2000,
  },
  "orientation": Orientation {
    "Forward": "Left",
    "Up": "Up",
  },
  "sizeMB": 0.12,
  "thrustAtmospheric": Object {},
  "thrustHydrogen": Object {},
  "thrustIon": Object {
    "Backward": 345600,
    "Down": 691200,
    "Forward": 345600,
    "Left": 1382400,
    "Right": 691200,
    "Up": 691200,
  },
  "vanilla": true,
  "width": 12.5,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise RespawnShip 2`] = `
"AAAAA
ABBAA
BBBBB
ABBAA
..A..
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise RespawnShip 3`] = `
"....AAAAA..
AAAAAAAAAAA
AABAAAAABBC
AAAAAAAAAAA
......AA...
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise RespawnShip 4`] = `
".ABAA
.BBBA
ABBBA
.ABAA
.ABAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise dekartaTests 1`] = `
Object {
  "DLCs": Array [],
  "DLCsCount": 0,
  "_revision": 0,
  "_version": 14,
  "blockCount": 180,
  "blockCountTotal": 180,
  "blockIntegrity": 550400,
  "blockMass": 118000,
  "blockPCU": 180,
  "blockTime": 1632,
  "blockVolume": 4062500,
  "blocks": Object {
    "<Vanilla Light Armor blocks>": 164,
    "<Vanilla Window blocks>": 16,
  },
  "componentCount": 6740,
  "componentMass": 118000,
  "componentTime": 6740,
  "componentVolume": 31020,
  "components": Object {
    "BulletproofGlass": 2240,
    "Girder": 400,
    "SteelPlate": 4100,
  },
  "flagsGreen": Array [],
  "flagsGreenCount": 0,
  "flagsRed": Array [],
  "flagsRedCount": 0,
  "flagsYellow": Array [],
  "flagsYellowCount": 0,
  "gridCount": 1,
  "gridSize": "Large",
  "gridStatic": false,
  "gridTitle": "dekarta Tests",
  "height": 30,
  "ingotCount": 122100,
  "ingotMass": 122100,
  "ingotTime": 24585,
  "ingotVolume": 25654,
  "ingots": Object {
    "Iron": 88500,
    "Silicon": 33600,
  },
  "integrityPlanes": Object {
    "front": Any<Array>,
    "maxValue": 32500,
    "rotated": false,
    "side": Any<Array>,
    "top": Any<Array>,
  },
  "length": 32.5,
  "missingDefinitions": Object {
    "blocks": Object {},
    "components": Object {},
    "ingots": Object {},
    "ores": Object {},
  },
  "missingDefinitionsCount": 0,
  "oreCount": 174429,
  "oreMass": 174429,
  "oreVolume": 64539,
  "ores": Object {
    "Iron": 126429,
    "Silicon": 48000,
  },
  "orientation": Orientation {
    "Forward": "Forward",
    "Up": "Up",
  },
  "sizeMB": 0.05,
  "thrustAtmospheric": Object {},
  "thrustHydrogen": Object {},
  "thrustIon": Object {},
  "vanilla": true,
  "width": 10,
}
`;

exports[`PraisalManager.praiseSbc should succeed to praise dekartaTests 2`] = `
"BB..
BAAA
BAAA
BA..
BA..
BA..
BBAA
AAAA
AAA.
AAA.
AAA.
AA..
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise dekartaTests 3`] = `
"AAAAAAAAAAAAA
AAAAAAAAAAAAA
AAAAAAAAAAAAA
AAAAAAAAAAAAA
AAAAAAAAAAAAA
AAAAAAAAAAAAA
AAAAAAAAAAAAA
AAAAA....AAAA
.........AAAA
.........AAAA
.........AAAA
.........AAAA
"
`;

exports[`PraisalManager.praiseSbc should succeed to praise dekartaTests 4`] = `
"BBBBAAAAAAAAA
BAAAAAAAAAAAA
.AA....AAAAA.
.AA....AA....
"
`;
